--- a/work.html
+++ b/work.html
@@ -34,85 +34,85 @@
     <h1 id="heading2">Tehtud tööd</h1>
     <div class="container" id="lightgallery">
       <a href="images/18402798_1402594696472883_2149066693299583048_n.webp" class="vertical">
-          <img alt="img1" src="images/18402798_1402594696472883_2149066693299583048_n.webp" />
+          <img alt="piksekaitse1" src="images/18402798_1402594696472883_2149066693299583048_n.webp" />
       </a>
       <a href="images/37049988_1864775393588142_5246727732351467520_n.webp" class="big">
-        <img alt="img1" src="images/37049988_1864775393588142_5246727732351467520_n.webp" />
+        <img alt="piksekaitse2" src="images/37049988_1864775393588142_5246727732351467520_n.webp" />
     </a>
     <a href="images/615364_455968434468852_1736266780_o.webp" class="vertical">
-      <img alt="img1" src="images/615364_455968434468852_1736266780_o.webp" />
+      <img alt="piksekaitse3" src="images/615364_455968434468852_1736266780_o.webp" />
   </a>
   <a href="images/DSCN7357.webp" class="horizontal">
-    <img alt="img1" src="images/DSCN7357.webp" />
+    <img alt="piksekaitse4" src="images/DSCN7357.webp" />
   </a>
   <a href="images/734410_594581833940844_1839303705_n.webp" class="vertical">
-    <img alt="img1" src="images/734410_594581833940844_1839303705_n.webp" />
+    <img alt="piksekaitse5" src="images/734410_594581833940844_1839303705_n.webp" />
   </a>
   <a href="images/704773_458017147597314_1917920515_o.webp" class="big">
-    <img alt="img1" src="images/704773_458017147597314_1917920515_o.webp" />
+    <img alt="piksekaitse6" src="images/704773_458017147597314_1917920515_o.webp" />
   </a>
   <a href="images/69341808_2523039971095011_7697872869623070720_n.webp" class="horizontal">
-    <img alt="img1" src="images/69341808_2523039971095011_7697872869623070720_n.webp" />
+    <img alt="piksekaitse7" src="images/69341808_2523039971095011_7697872869623070720_n.webp" loading="lazy"/>
   </a>
   <a href="images/piksekaitse-8.webp" class="vertical">
-    <img alt="img1" src="images/piksekaitse-8.webp" />
+    <img alt="piksekaitse8" src="images/piksekaitse-8.webp" loading="lazy"/>
   </a>
   <a href="images/piksekaitse-550.webp" class="horizontal">
-    <img alt="img1" src="images/piksekaitse-550.webp" />
+    <img alt="piksekaitse9" src="images/piksekaitse-550.webp" loading="lazy"/>
   </a>
   <a href="images/piksekaitse-571.webp" class="horizontal">
-    <img alt="img1" src="images/piksekaitse-571.webp" />
+    <img alt="piksekaitse10" src="images/piksekaitse-571.webp" loading="lazy"/>
   </a>
   <a href="images/737456_455967611135601_1682029942_o.webp" class="big">
-    <img alt="img1" src="images/737456_455967611135601_1682029942_o.webp" />
+    <img alt="piksekaitse11" src="images/737456_455967611135601_1682029942_o.webp" loading="lazy"/>
   </a>
   <a href="images/741052_455960984469597_838608787_o.webp" class="vertical">
-    <img alt="img1" src="images/741052_455960984469597_838608787_o.webp" />
+    <img alt="piksekaitse12" src="images/741052_455960984469597_838608787_o.webp" loading="lazy"/>
   </a>
   <a href="images/12345426_977253719006985_4446075077059025364_n.webp" class="horizonyal">
-    <img alt="img1" src="images/12345426_977253719006985_4446075077059025364_n.webp" />
+    <img alt="piksekaitse13" src="images/12345426_977253719006985_4446075077059025364_n.webp" loading="lazy"/>
   </a>
   <a href="images/dscn4761.webp" class="big">
-    <img alt="img1" src="images/dscn4761.webp" />
+    <img alt="piksekaitse14" src="images/dscn4761.webp" loading="lazy"/>
   </a>
   <a href="images/dscn4778.webp" class="big">
-    <img alt="img1" src="images/dscn4778.webp" />
+    <img alt="piksekaitse15" src="images/dscn4778.webp" loading="lazy"/>
   </a>
   <a href="images/piksekaitse-9.webp" class="vertical">
-    <img alt="img1" src="images/piksekaitse-9.webp" />
+    <img alt="piksekaitse16" src="images/piksekaitse-9.webp" loading="lazy"/>
   </a>
   <a href="images/1385492_594585110607183_1957654492_n.webp" class="vertical">
-    <img alt="img1" src="images/1385492_594585110607183_1957654492_n.webp" />
+    <img alt="piksekaitse17" src="images/1385492_594585110607183_1957654492_n.webp" loading="lazy"/>
   </a>
   <a href="images/11406729_890783004320724_1578766331826754690_n.webp" class="vertical">
-    <img alt="img1" src="images/11406729_890783004320724_1578766331826754690_n.webp" />
+    <img alt="piksekaitse18" src="images/11406729_890783004320724_1578766331826754690_n.webp" loading="lazy"/>
   </a>
   <a href="images/11415479_890782314320793_4417701050757018469_o.webp" class="vertical">
-    <img alt="img1" src="images/11415479_890782314320793_4417701050757018469_o.webp" />
+    <img alt="piksekaitse19" src="images/11415479_890782314320793_4417701050757018469_o.webp" loading="lazy"/>
   </a>
   <a href="images/12234896_977253595673664_5250735147745626935_n.webp" class="vertical">
-    <img alt="img1" src="images/12234896_977253595673664_5250735147745626935_n.webp" />
+    <img alt="piksekaitse20" src="images/12234896_977253595673664_5250735147745626935_n.webp" loading="lazy"/>
   </a>
   <a href="images/71375749_2563618643703810_2980158380833767424_n.webp" class="vertical">
-    <img alt="img1" src="images/71375749_2563618643703810_2980158380833767424_n.webp" />
+    <img alt="piksekaitse21" src="images/71375749_2563618643703810_2980158380833767424_n.webp" loading="lazy"/>
   </a>
   <a href="images/71469542_2563618263703848_7991803423290818560_n.webp" class="vertical">
-    <img alt="img1" src="images/71469542_2563618263703848_7991803423290818560_n.webp" />
+    <img alt="piksekaitse22" src="images/71469542_2563618263703848_7991803423290818560_n.webp" loading="lazy"/>
   </a>
   <a href="images/DSCN8996-e1497806138256.webp" class="vertical">
-    <img alt="img1" src="images/DSCN8996-e1497806138256.webp" />
+    <img alt="piksekaitse23" src="images/DSCN8996-e1497806138256.webp" loading="lazy"/>
   </a>
   <a href="images/piksekaitse-3.webp" class="vertical">
-    <img alt="img1" src="images/piksekaitse-3.webp" />
+    <img alt="piksekaitse24" src="images/piksekaitse-3.webp" loading="lazy"/>
   </a>
   <a href="images/piksekaitse-6.webp" class="vertical">
-    <img alt="img1" src="images/piksekaitse-6.webp" />
+    <img alt="piksekaitse25" src="images/piksekaitse-6.webp" loading="lazy"/>
   </a>
   <a href="images/dscn2920.webp" class="vertical">
-    <img alt="img1" src="images/dscn2920.webp" />
+    <img alt="piksekaitse26" src="images/dscn2920.webp" loading="lazy"/>
   </a>
   <a href="images/DSCN9272.webp" class="vertical">
-    <img alt="img1" src="images/DSCN9272.webp" />
+    <img alt="piksekaitse27" src="images/DSCN9272.webp" loading="lazy"/>
   </a>
   </div>
   </section>
