--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,13 @@
             <div class="box">
                 <img src="images/phone-icon.png" alt="">
                 <h3>Telefon</h3>
-                <span>+372 56 674 254</span>
+                <a href="tel:56674254"><span>+372 56 674 254</span></a>
             </div>
             <div class="box">
                 <img src="images/email-icon.png" alt="">
                 <h3>Email</h3>
-                <span> piksepoisid@gmail.com <br> uuetamme@gmail.com</span>
+                <a href="mailto:piksepoisid@gmail.com"><span> piksepoisid@gmail.com</span></a>
+                <a href="mailto:uuetamme@gmail.com"><span>uuetamme@gmail.com</span></a>
             </div>
             <div class="box">
                 <img src="images/address-icon.png" alt="">
@@ -58,7 +59,7 @@
     <section class="footer" id="footer">
       <div class="contact">
       <p> Email: <br> piksepoisid@gmail.com <br> uuetamme@gmail.com </p>
-      <p>Tel: +372  56674254</p>
+      <a href="tel:56674254"><p>Tel: +372  56674254</p></a>
       </div>
       <div class="rights-main">
         <img src="images/piksepoisid.webp" alt="">
