--- a/work.html
+++ b/work.html
@@ -119,7 +119,7 @@
   <section class="footer" id="footer">
     <div class="contact">
     <p> Email: <br> piksepoisid@gmail.com <br> uuetamme@gmail.com </p>
-    <p>Tel: +372  56674254</p>
+    <a href="tel:56674254"><p>Tel: +372  56674254</p></a>
     </div>
 
     <div class="rights-main">
